<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_screen"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="8dp">

                <TextView
                    style="@style/BtnTopic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="ลงทะเบียนผู้ป่วย" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="-10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="40dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        card_view:cardBackgroundColor="@color/colorAccent"
                        card_view:cardCornerRadius="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="20dp"
                            android:paddingTop="5dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="5dp"
                            android:text="@string/userInfo"
                            android:textColor="#ffffff"
                            android:textSize="24sp" />

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <EditText
                            android:id="@+id/etName"
                            style="@style/TextRegular26"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/etSurname"
                            style="@style/TextRegular26"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lastname"
                            android:inputType="textPersonName" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/etAge"
                                style="@style/TextRegular26"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/age"
                                android:inputType="number" />

                            <EditText
                                android:id="@+id/etWeight"
                                style="@style/TextRegular26"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/weight"
                                android:inputType="number" />
                        </LinearLayout>


                        <EditText
                            android:id="@+id/etDisease"
                            android:textSize="26sp"
                            android:focusable="false"
                            android:textColor="#888888"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_expand_more_black_24dp"
                            android:hint="@string/disease"
                            android:freezesText="true"
                            android:inputType="none" />

                        <EditText
                            android:id="@+id/etAllergic"
                            style="@style/TextRegular26"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/allergic"
                            android:inputType="text" />
                    </LinearLayout>

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        card_view:cardBackgroundColor="@color/colorAccent"
                        card_view:cardCornerRadius="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="20dp"
                            android:paddingTop="5dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="5dp"
                            android:text="@string/loginInfo"
                            android:textColor="#ffffff"
                            android:textSize="24sp" />

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <EditText
                            android:id="@+id/etUsername"
                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890-_."
                            style="@style/TextRegular26"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:drawablePadding="8dp"
                            android:drawableLeft="@drawable/ic_person_black_24dp" />

                        <EditText
                            android:id="@+id/etPassword"
                            style="@style/TextRegular26"
                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890-_."
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:drawablePadding="8dp"
                            android:drawableLeft="@drawable/ic_lock_black_24dp"
                            android:inputType="textPassword" />

                        <EditText
                            android:id="@+id/etTel"
                            style="@style/TextRegular26"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:drawableLeft="@drawable/ic_phone_black_24dp"
                            android:hint="@string/phone"
                            android:imeOptions="actionDone"
                            android:inputType="phone" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal">

                            <mehdi.sakout.fancybuttons.FancyButton
                                style="@style/TextBold30"
                                android:id="@+id/btnCancelRegister"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                fancy:fb_defaultColor="@color/colorBtnRed"
                                fancy:fb_radius="5dp"
                                fancy:fb_text="ยกเลิก"
                                android:elevation="2dp" />

                            <mehdi.sakout.fancybuttons.FancyButton
                                android:id="@+id/btnRegister"
                                style="@style/TextBold30"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                fancy:fb_defaultColor="@color/colorBtnBlue"
                                fancy:fb_radius="5dp"
                                fancy:fb_text="ยืนยัน"
                                android:elevation="2dp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:layout_marginTop="15dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="22sp"
                                android:text="หากเป็นสมาชิกอยู่แล้ว "/>
                            <com.libRG.CustomTextView
                                android:id="@+id/tvToLogin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="22sp"
                                android:text="เข้าสู่ระบบที่นี่"
                                android:textColor="@color/colorBtnBlue"
                                android:visibility="visible"
                                app:lib_setUnderLineText="true"/>

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>